# lab-usage

./: .gitignore  Cargo.toml  README.md  deploy.sh  future-notes.txt  go.sh  pull_data.sh
select/: caplab  east_cad  emaglab  etmlab  fab  mcae  pwrlab  remotelab  teklab  wclab  west_cad
src/: main.rs
