[package]
name = "lab-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
humantime = "2.1.0"
itertools = "0.12.1"
time = { version = "0.3.21", features = ["parsing"] }

[dev-dependencies]
glob = "0.3.1"

[profile.test]
opt-level = 3

[profile.release]
debug = 1
